Fix buttons align

--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@
 .buttons {
     background-color: black;
     display: flex;
+    align-items: center;
 }
 
 .spacer {
